# pcap-viewer

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/app/: mod.rs
src/app/error/: mod.rs  types.rs
src/app/logging/: mod.rs  setup.rs
src/cli/: args.rs  hex_viewer.rs  mod.rs  pcap_parser.rs
src/core/: mod.rs
src/core/input/: keyboard.rs  mod.rs
src/core/pcap/: mod.rs  parser.rs
src/core/viewer/: display_utils.rs  hex_display.rs  mod.rs  pagination.rs  terminal.rs
