[package]
name = "pcap-viewer"
version = "0.1.0"
edition = "2021"
authors = ["KimoTech"]
description = "PCAP文件十六进制查看器"

[dependencies]
# 数据包读写
pcapfile-io = { version = "0.1.0" }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# 文件系统
path-absolutize = "3.1"
dirs = "5.0"

# CRC 校验
crc32fast = "1.3"

# 命令行工具
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
crossterm = "0.27"

[features]
default = []
